--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,14 @@ find_package(GTest CONFIG REQUIRED)
 
 add_library(shared_ptr STATIC
         ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
-        sources/functions.cpp)
+        )
 add_executable(tests
         ${CMAKE_CURRENT_SOURCE_DIR}/tests/test.cpp
         )
 
 add_executable(main
-        ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp sources/functions.cpp)
+        ${CMAKE_CURRENT_SOURCE_DIR}/sources/source.cpp
+        )
 
 target_include_directories(shared_ptr
         PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -45,6 +46,7 @@ target_include_directories(tests
 target_link_libraries(tests GTest::main shared_ptr)
 
 target_link_libraries(main shared_ptr)
+
 
 enable_testing()
 add_test(NAME unit_tests COMMAND tests)
